--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lucide-react": "^0.555.0",
     "next": "16.0.5",
     "next-auth": "^5.0.0-beta.30",
+    "next-themes": "^0.4.6",
     "qrcode": "^1.5.4",
     "react": "19.2.0",
     "react-day-picker": "^9.11.3",
