--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
     "react-day-picker": "^9.11.3",
     "react-dom": "19.2.0",
     "react-hook-form": "^7.67.0",
+    "react-resizable-panels": "^2.1.7",
     "recharts": "^3.5.1",
+    "sonner": "^1.7.1",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
     "zod": "^4.1.13"
